# shoplisting3

./: .gitignore  pyproject.toml  readme.md
shoplisting/: admin.py  db.py  main.py  model.py
shoplisting/config/: config.py
shoplisting/routes/: data_api.py  svg_api.py
shoplisting/slist/: csv.py  slist.py
shoplisting/static/: common.js
shoplisting/svg/: svg_helper.py  svg_render.py
shoplisting/templates/: cards_batches.html  config_list.html  delete_modal.html  json_test.html  landing_page.html  markdown_page.html  recipe_editor.html  recipe_print.html  sl_picker.html
shoplisting/ui/: forms.py
shoplisting/util/: format.py  math.py
tools/: tag_in_place.py
