[tool.poetry]
name = "shoplisting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.3"
sqlalchemy = "^2.0.50"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-admin = {extras = ["peewee"], version = "^2.2.0"}
numpy = "^2.4.6"
drawsvg = "^2.4.1"
requests = "^2.34.2"
pillow = "^12.2.0"
pylibdmtx = "^0.1.10"
snakemd = "^2.4.1"
markdown = "^3.10.2"

[tool.poetry.scripts]
server = "shoplisting.main:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
